--- a/render.yaml
+++ b/render.yaml
@@ -2,4 +2,6 @@ services:
   - type: web
     name: text-extractor
     env: docker
-    plan: free
+    plan: starter
+    autoDeploy: true
+    healthCheckPath: /
